tests/models/struct/unnamed/vec/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    Vec<()>
);
fn main() {}
